--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,12 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Loot Game";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="jumbotron text-center">
+    <h1 class="display-4">Loot Game</h1>
+    <h5>The Plundering Pirate Card Game</h5>
+    <h5>2-8 players - ages 10 & up</h5>
+    <hr/>
+<button class="btn btn-lg btn-outline-success btn-block" href="#">START</button><br/>
+<button class="btn btn-lg btn-outline-success btn-block" href="#">HOW TO PLAY</button>
 </div>
